--- a/packages.conf
+++ b/packages.conf
@@ -13,6 +13,7 @@ SYSTEM_UTILS=(
   unzip
   wget
   curl
+  zoxide
 )
 
 # Development tools
@@ -45,6 +46,11 @@ MEDIA=(
   vlc
   flameshot
   gimp
+  mpv
+  ffmpeg
+  shotcut
+  cheese
+  footage
 )
 
 # Fonts
